# vidos

./: .env.dist  .gitignore  README.md  dev_set_up.sh  dev_widget.json  docker-compose.dev.yml  docker-compose.local.yml
src/accounts/: .dockerignore  Dockerfile  pyproject.toml
src/accounts/accounts/: settings.py  urls.py
src/accounts/core/bases/: emails.py
src/accounts/templates/emails/: registration.html
src/accounts/users/: admin.py  managers.py  models.py
src/accounts/users/api/: serializers.py  urls.py  views.py
src/accounts/users/migrations/: 0001_initial.py  0002_user_role.py  0003_alter_user_managers.py  0004_alter_user_managers.py
src/accounts/users/services/: emails.py
src/accounts/users/tests/: test_urls.py
src/accounts/websites/: admin.py  models.py
src/accounts/websites/api/: serializers.py  urls.py  views.py
src/accounts/websites/migrations/: 0001_initial.py  0002_auto_20231227_1838.py  0003_alter_website_options.py
src/accounts/websites/tests/: test_urls.py
src/gateway/: nginx.conf
src/home/: Dockerfile  package-lock.json  package.json  webpack.config.js
src/home/src/: index.html  index.jsx
src/home/src/_components/: Nav.jsx  PrivateRoute.jsx
src/home/src/_helpers/: fetch-wrapper.js  index.js
src/home/src/_services/: account.service.js  storage.js
src/home/src/account/: Index.jsx  Login.jsx
src/home/src/app/: index.jsx
src/home/src/home/: Index.jsx
src/home/src/profile/: Details.jsx  Index.jsx
src/video_insert/: Dockerfile  decoded_output.avi  main.py  pyproject.toml  routers.py
src/video_insert/app/auth/: auth.py
src/video_insert/app/files/: client.py  permissions.py  schemas.py  services.py  utils.py  views.py
src/video_insert/core/: database.py  media_storage.py  routers.py  settings.py
src/video_redactor/: Dockerfile  manage.py  pyproject.toml
src/video_redactor/core/: authentication.py  models.py  shortcuts.py
src/video_redactor/redactor/: apps.py  models.py  utils.py
src/video_redactor/redactor/api/: serializers.py  urls.py  views.py
src/video_redactor/video_redactor/: asgi.py  settings.py  urls.py  wsgi.py
src/video_widget_schema_provider/: Dockerfile  main.py  pyproject.toml
src/video_widget_schema_provider/app/widgets/: schemas.py  services.py  views.py
src/video_widget_schema_provider/core/: database.py  health.py  routers.py  schemas.py  settings.py
